# SOXL-Tracker3

./: main.py  pyproject.toml  requirements.txt
poc/: task1_1_yfinance_test.py  task1_2_boats_test.py
src/: app.py  data.py
