[project]
name = "2-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
    "streamlit-autorefresh>=1.0.1",
    "tvdatafeed",
    "yfinance>=1.3.0",
]

[tool.uv.sources]
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed.git" }
